--- a/Mafia/Base.lproj/Main.storyboard
+++ b/Mafia/Base.lproj/Main.storyboard
@@ -186,13 +186,23 @@
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Без имени" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0i-4V-J3e">
-                                                    <rect key="frame" x="11" y="8" width="140" height="21"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="lw5-9u-VZy">
+                                                    <rect key="frame" x="11" y="8" width="71" height="16"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Gw0-9d-Q4I">
+                                                            <rect key="frame" x="0.0" y="0.0" width="71" height="16"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Без имени" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0i-4V-J3e">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="71" height="16"/>
+                                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="sSg-6A-T35">
                                                     <rect key="frame" x="159" y="7" width="182" height="44"/>
                                                     <subviews>
@@ -311,7 +321,7 @@
                                     <constraint firstAttribute="width" secondItem="hTs-0E-AWg" secondAttribute="height" multiplier="343:508" id="G2X-Wb-9dg"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChooseTableViewCell" id="P75-aI-TnT" customClass="ChooseTableViewCell" customModule="Mafia" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ChooseTableViewCell" id="P75-aI-TnT" customClass="ChooseTableViewCell" customModule="Mafia" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="P75-aI-TnT" id="EYe-km-Ag4">
@@ -320,28 +330,46 @@
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fA-HY-7m0">
                                                     <rect key="frame" x="237" y="8" width="98" height="30"/>
+                                                    <color key="tintColor" red="1" green="0.35589174639999999" blue="0.2884042268" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <state key="normal" title="Выбрать"/>
                                                     <connections>
                                                         <action selector="chooseButton:" destination="XN1-Lj-Oc9" eventType="touchUpInside" id="mTx-dm-hwN"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Заголовок" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBo-Lr-hgo">
-                                                    <rect key="frame" x="8" y="12" width="114" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zub-cn-Zgf">
+                                                    <rect key="frame" x="8" y="17" width="28" height="16"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="zub-cn-Zgf" secondAttribute="height" multiplier="7:4" id="Sn8-wG-n2A"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Заголовок" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBo-Lr-hgo">
+                                                    <rect key="frame" x="38" y="12" width="174" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="mBo-Lr-hgo" secondAttribute="height" multiplier="58:7" id="b5a-cs-CRH"/>
+                                                        <constraint firstAttribute="width" constant="174" id="jJP-Hd-1U6"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="mBo-Lr-hgo" firstAttribute="top" secondItem="EYe-km-Ag4" secondAttribute="topMargin" constant="4" id="HYq-JO-XYI"/>
                                                 <constraint firstAttribute="trailing" secondItem="4fA-HY-7m0" secondAttribute="trailing" constant="8" id="JXQ-Qz-ncy"/>
+                                                <constraint firstItem="zub-cn-Zgf" firstAttribute="top" secondItem="EYe-km-Ag4" secondAttribute="topMargin" constant="9" id="JYr-UW-NKY"/>
                                                 <constraint firstItem="4fA-HY-7m0" firstAttribute="top" secondItem="EYe-km-Ag4" secondAttribute="top" constant="8" id="QPF-sH-r7r"/>
-                                                <constraint firstItem="mBo-Lr-hgo" firstAttribute="leading" secondItem="EYe-km-Ag4" secondAttribute="leadingMargin" id="c7q-uh-Fo8"/>
+                                                <constraint firstItem="mBo-Lr-hgo" firstAttribute="top" secondItem="EYe-km-Ag4" secondAttribute="topMargin" constant="4" id="Zxe-Xn-WW8"/>
+                                                <constraint firstItem="mBo-Lr-hgo" firstAttribute="leading" secondItem="zub-cn-Zgf" secondAttribute="trailing" constant="2" id="gDQ-ti-nkT"/>
+                                                <constraint firstItem="zub-cn-Zgf" firstAttribute="leading" secondItem="EYe-km-Ag4" secondAttribute="leadingMargin" id="kD5-gs-V0h"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <connections>
                                             <outlet property="cellName" destination="mBo-Lr-hgo" id="8n5-LK-w8a"/>
                                             <outlet property="chooseButton" destination="4fA-HY-7m0" id="rkb-9K-vaa"/>
+                                            <outlet property="numbelLabel" destination="zub-cn-Zgf" id="lD4-fD-enc"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -365,6 +393,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="eGI-qB-AjB" secondAttribute="height" multiplier="1:1" id="tjB-ux-F6f"/>
                                 </constraints>
+                                <color key="tintColor" red="1" green="0.35589174639999999" blue="0.2884042268" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="addNewPlayer:" destination="XN1-Lj-Oc9" eventType="touchUpInside" id="BoM-0g-VBg"/>
                                 </connections>
@@ -402,6 +431,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addNewPlayer" destination="eGI-qB-AjB" id="MXK-TM-c8o"/>
+                        <outlet property="addUserTableView" destination="hTs-0E-AWg" id="bLc-og-Fdg"/>
                         <outlet property="cancelButton" destination="vlu-GW-5tS" id="oOH-Oe-LNF"/>
                         <outlet property="chooseTableView" destination="hTs-0E-AWg" id="OUp-lw-YR9"/>
                         <outlet property="nameTextField" destination="6Lv-qH-zmP" id="SLw-FV-WYc"/>
